---
source: web/book/tests/snapshot.rs
expression: "from employees\nderive total_distance = sum distance # generates the error shown below\nderive other_distance = (sum distance) # works as expected\n"
---
Error:
   ╭─[:2:29]
   │
 2 │ derive total_distance = sum distance # generates the error shown below
   │                             ────┬───
   │                                 ╰───── Unknown name distance
───╯

